--- a/ud839_Miwok-Starter-code/app/src/main/res/layout/list_item.xml
+++ b/ud839_Miwok-Starter-code/app/src/main/res/layout/list_item.xml
@@ -3,33 +3,45 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/list_item_height"
+    android:id="@+id/list_item"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:background="@color/tan_background">
 
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/list_item_height"
+            android:layout_height="@dimen/list_item_height"
             android:src="@mipmap/ic_launcher"
             android:id="@+id/image"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/text_container"
             android:orientation="vertical"
             android:paddingLeft="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="bottom"
                 android:id="@+id/miwok_textView"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
                 tools:text="lutti"/>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="top"
                 android:id="@+id/default_textView"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="#FFFFFF"
                 tools:text="one"/>
 
         </LinearLayout>
