--- a/ud839_Miwok-Starter-code/app/src/main/res/layout/activity_main.xml
+++ b/ud839_Miwok-Starter-code/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/CategoryTab"
         app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
